# nbody_simulation_cpp

./: .gitignore  meson.build  run.sh
src/: debug.cpp  debug.hpp  main.cpp  math.cpp  math.hpp  meson.build  recorder.cpp  recorder.hpp  window.cpp  window.hpp
src/shaders/: shader.glsl  shader.glsl.comp  shader.glsl.frag  shader.glsl.vert
